#3296 z-index fix

--- a/src/app/shared/components/top-bar/top-bar.component.scss
+++ b/src/app/shared/components/top-bar/top-bar.component.scss
@@ -13,7 +13,7 @@
 .top-bar-notifications {
   position: absolute;
   right: 16px;
-  z-index: 1;
+  z-index: 2;
   margin: 16px;
   height: 40px;
 }
